fix Content Layout Shift problems

--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -97,7 +97,7 @@ tr td:first-child code:first-child span {
 @font-face {
 	font-family: "Fira Sans";
 	src: url("/fonts/FiraSans-Regular.woff2") format("woff2");
-	font-display: swap;
+	font-display: optional;
 	/*unicode-range: U+0020-007F; The bare minimum for the English Language */
 }
 
